      - Added HTML extension that currently supports write HTML form
        in URL encoded or multipart form data. As a future replacement for 
        the org.restlet.data.Form class, it adds the ability to work with 
        multipart forms (currently writing only) with the same Java API.
        Some suggestions from John Logdson.
    - Bug fixed
      - Fixed potential NPE in the Authenticator when logging authentication 
        failure. Reported by Martin Svensson.
     - Misc
      - Optimized the HeaderReader class beavhior in the engine.
      - Optimized the processing of extra headers and challenge schemes. 
        Contributed by Scott S. McCoy
      
- 2.1 Milestone 5 (06/21/2011)
    - API changes
      - Moved SslContextFactory and DefaultSslContextFactory classes from 
        internal to public org.restlet.ext.ssl package.
      - Renamed Status#getName() method to getReasonPhrase() for more clarity
        regarding the purpose of the additional "description" property used
        for lengthier explanations.
      - Added Response#isFinal() and isProvisional() methods, based on
        Status#isInformational().
      - Added MediaType.MESSAGE_HTTP constant.        
    - Enhancements
      - Added OAuth 2.0 and OpenID 2.0 extensions that have been maturing
        in the incubator for a while after a contribution by Ericsson Labs.
        Contributed by Kristoffer Gronowski and Martin Svensson.
      - Updated and consolidated the SSL/HTTPS configuration parameters
        for all HTTPS connectors.
      - Added a warning message to indicate that an application without a 
        parent component can't handle outbound calls by default.
        Reported by John Logsdon and Kristoffer Gronowski.
      - Allowed change of the parent context of a VirtualHost via the
        setContext() method.
      - Allowed change of the parent context of a VirtualHost via the
        setContext() method.
    - Bug fixed