@@ -151,3 +151,5 @@ kristoffer
 gronowski
 ontology
 multipart
+searchable
+editable
